--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,6 +28,7 @@
         android:layout_marginBottom="148dp"
         android:backgroundTint="#A696CF"
         android:text="@string/sign_up"
+        android:onClick="signingUp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,6 +40,7 @@
         android:layout_height="63dp"
         android:layout_marginTop="301dp"
         android:text="@string/log_in"
+        android:onClick="loggingIn"
         app:layout_constraintBottom_toTopOf="@+id/signup_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -48,7 +50,7 @@
     <EditText
         android:id="@+id/editTextText"
         android:layout_width="250dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginTop="79dp"
         android:layout_marginBottom="57dp"
         android:ems="10"
@@ -63,7 +65,7 @@
     <EditText
         android:id="@+id/editTextText2"
         android:layout_width="250dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginBottom="75dp"
         android:ems="10"
         android:hint="@string/password"
