--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -97,6 +97,7 @@
         android:layout_height="0dp"
         android:layout_marginBottom="78dp"
         android:text="@string/sign_up"
+        android:onClick="registerUser"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
