--- a/app/src/main/res/layout/fragment_meal.xml
+++ b/app/src/main/res/layout/fragment_meal.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MealFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/meal_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="meal fragment" />
+        android:padding="16dp"
+        tools:listitem="@layout/meal_item" />
 
-</FrameLayout>
+</RelativeLayout>
