--- a/app/src/main/res/layout/meal_item.xml
+++ b/app/src/main/res/layout/meal_item.xml
@@ -27,6 +27,7 @@
             android:layout_weight="1"
             android:gravity="center_vertical|start"
             android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             android:text="@string/name"
             android:textSize="20sp" />
 
@@ -36,6 +37,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_vertical|end"
+            android:paddingStart="8dp"
             android:paddingEnd="8dp"
             android:text="@string/calories"
             android:textSize="20sp" />
