--- a/app/src/main/res/layout/dialog_add_meal.xml
+++ b/app/src/main/res/layout/dialog_add_meal.xml
@@ -8,14 +8,14 @@
     <EditText
         android:id="@+id/add_meal_name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:hint="@string/name"
         android:inputType="text" />
 
     <EditText
         android:id="@+id/add_meal_calories"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:hint="@string/calories"
         android:inputType="number" />
 
