summary user stats

--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -36,7 +36,7 @@
                 android:gravity="center" />
 
             <TextView
-                android:id="@+id/BmiTextView"
+                android:id="@+id/bmiTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#FFFFFF"
