--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -46,6 +46,7 @@
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/summary_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="12dp"
