--- a/app/src/main/res/layout/activity_mainpage.xml
+++ b/app/src/main/res/layout/activity_mainpage.xml
@@ -36,10 +36,10 @@
             android:text="@string/summary" />
 
         <com.google.android.material.tabs.TabItem
-            android:id="@+id/stepsTab"
+            android:id="@+id/heartRateTab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/steps" />
+            android:text="@string/heart_rate" />
     </com.google.android.material.tabs.TabLayout>
 
     <androidx.fragment.app.FragmentContainerView
