--- a/app/src/main/res/layout/fragment_sensor.xml
+++ b/app/src/main/res/layout/fragment_sensor.xml
@@ -6,11 +6,11 @@
     tools:context=".SensorFragment">
 
     <TextView
-        android:id="@+id/heartRateTextView"
+        android:id="@+id/stepTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="@string/heart_rate"
+        android:text="@string/steps"
         android:textColor="#6750A3"
         android:textSize="40sp" />
 
