--- a/app/src/main/res/layout/dialog_edit_meal.xml
+++ b/app/src/main/res/layout/dialog_edit_meal.xml
@@ -40,7 +40,7 @@
             android:id="@+id/edit_meal_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/add" />
+            android:text="@string/edit" />
 
     </LinearLayout>
 
