--- a/app/src/main/res/layout/fragment_meal.xml
+++ b/app/src/main/res/layout/fragment_meal.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MealFragment">
+    tools:context=".Meal.MealFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/meal_recycler_view"
