--- a/app/src/main/res/layout/fragment_hydration.xml
+++ b/app/src/main/res/layout/fragment_hydration.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Meal.MealFragment">
+    tools:context=".meal.MealFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/liquid_recycler_view"
